vlib/v/parser/tests/postfix_err_a.vv
fn f(i int) {}

fn test_postfix() {
	mut x := 1
	_ = (x++)
	x--, x-- // OK
	f(x++)
	a := [x]
	_ = a[x--]
}

